--- a/package.json
+++ b/package.json
@@ -1,22 +1,46 @@
 {
   "name": "eshop",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.tsx",
+  "overrides": {
+    "metro": "0.73.7",
+    "metro-resolver": "0.73.7"
+  },
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "amplify-modelgen": "node amplify/scripts/amplify-modelgen.js",
+    "amplify-push": "node amplify/scripts/amplify-push.js"
   },
   "dependencies": {
+    "@aws-amplify/datastore": "^4.0.17",
+    "@aws-amplify/datastore-storage-adapter": "^2.0.17",
+    "@expo-google-fonts/pacifico": "^0.2.3",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/netinfo": "9.3.7",
+    "aws-amplify": "^5.0.17",
     "expo": "~48.0.5",
+    "expo-constants": "~14.2.1",
+    "expo-file-system": "~15.2.2",
+    "expo-font": "~11.1.1",
+    "expo-linking": "~4.0.1",
+    "expo-router": "^1.2.2",
+    "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-dom": "18.2.0",
+    "react-native": "0.71.3",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "ini": "^1.3.5",
+    "inquirer": "^6.5.1",
     "typescript": "^4.9.4"
   },
   "private": true
